Test with postgrSQL

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,6 +14,17 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [3.9]
+    
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: demo
+        ports:
+          - 5432:5432
+        options: --health-cmd "pg_isready -U postgres -d demo" --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
     - uses: actions/checkout@v3
