--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -4,6 +4,6 @@
     "project_name": "xtweets-dev",
     "runtime": "python3.9",
     "s3_bucket": "portfile",
-    "aws_region": "us-west-1"
+    "aws_region": "us-east-1"
   } 
 }
